fix confilts